--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "Historical horse population in Canada"
-output: github_document
+
+
+output: 
+  github_document:
+    toc: true
 ---
 
 ```{r setup, include=FALSE}
