--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -65,7 +65,7 @@ max_horses <- horse_pop %>%
   group_by(Province) %>% 
   summarize(Maximum = max(Value),
             Minimum = min(Value))
-max_horses
+knitr::kable(max_horses, caption = "Table 1. Range of number of horses for each province between 1940-1972")
 ```
 
 Below we zoom in and look at the province of Alberta:
