--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -3,12 +3,12 @@ title: "Historical horse population in Canada"
 
 
 output: 
-  github_document:
+  html_document:
     toc: true
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 ```
 
@@ -39,7 +39,7 @@ The R programming language and the following R packages were used to perform the
 
 ## Results
 
-```{r plot horses, fig.width=10, fig.height=3}
+```{r plot horses, fig.cap= "Historical number of horses for each province in Canada",out.width='100%', fig.width=10, fig.height=3}
 horse_plot <- ggplot(horse_pop, aes(x = Ref_Date, y = Value)) +
   geom_point() +
   geom_line() +
@@ -70,7 +70,7 @@ knitr::kable(max_horses, caption = "Table 1. Range of number of horses for each 
 
 Below we zoom in and look at the province of Alberta:
 
-```{r plot province, fig.width=5, fig.height=4}
+```{r plot province, fig.cap= "Historical number of horses per province in Canada",out.width='100%', fig.width=5, fig.height=4}
 province_plot <- horse_pop %>% 
   filter(GEO == "Alberta") %>% 
   ggplot(aes(x = Ref_Date, y = Value)) +
