--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -5,7 +5,10 @@ title: "Historical horse population in Canada"
 output: 
   html_document:
     toc: true
-    
+
+params:
+  province: "Alberta"
+
 bibliography: references.bib
 ---
 
@@ -74,7 +77,7 @@ max_horses <- horse_pop %>%
 knitr::kable(max_horses, caption = "Table 1. Range of number of horses for each province between 1940-1972")
 ```
 
-Below we zoom in and look at the province of Alberta:
+Below we zoom in and look at the province of Alberta (`r params$province`):
 
 ```{r plot province, fig.cap= "Historical number of horses per province in Canada",out.width='100%', fig.width=5, fig.height=4}
 province_plot <- horse_pop %>% 
